--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -420,7 +420,12 @@
     "title": "Оценки"
   },
   "chat": {
-    "title": "Чат"
+    "title": "Чат",
+    "disabled": {
+      "title": "Чат временно отключен",
+      "message": "Функция чата временно недоступна",
+      "description": "Система чата находится на обслуживании"
+    }
   },
 
   "requests": {
@@ -506,7 +511,8 @@
     "notImplemented": "Не реализовано",
     "goBack": "Вернуться назад",
     "goHome": "На главную",
-    "contactSupport": "Связаться с поддержкой"
+    "contactSupport": "Связаться с поддержкой",
+    "pageMissingHint": "Возможно, вы забыли добавить страницу в роутер?"
   },
   "notifications": {
     "title": "Уведомления",
