chore: clean task logs and fix user labels

--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -636,6 +636,11 @@
     "goBack": "Go back",
     "goHome": "Go home",
     "contactSupport": "Contact support",
-    "pageMissingHint": "Did you forget to add the page to the router?"
+  "pageMissingHint": "Did you forget to add the page to the router?"
+  },
+  "roles": {
+    "admin": "Administrator",
+    "teacher": "Teacher",
+    "student": "Student"
   }
 }
