--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -570,6 +570,11 @@
     "scheduleChangedContent": "Изменения в расписании: {{info}}",
     "userProfileUpdatedByAdmin": "Ваш профиль был обновлён администратором.",
     "adminUpdatedUserProfile": "Вы обновили профиль пользователя {{name}}.",
-    "adminNotificationUserUpdated": "Профиль пользователя {{name}} был обновлён."
+  "adminNotificationUserUpdated": "Профиль пользователя {{name}} был обновлён."
+  },
+  "roles": {
+    "admin": "Администратор",
+    "teacher": "Преподаватель",
+    "student": "Студент"
   }
 }
