--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -20,6 +20,7 @@
       "import": "Import",
       "export": "Export",
       "refresh": "Refresh",
+      "retry": "Retry",
       "confirm": "Confirm",
       "reject": "Reject",
       "approve": "Approve"
