--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -41,6 +41,7 @@
       "import": "Импорт",
       "export": "Экспорт",
       "refresh": "Обновить",
+      "retry": "Повторить",
       "confirm": "Подтвердить",
       "reject": "Отклонить",
       "approve": "Утвердить"
