--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -430,7 +430,9 @@
   },
 
   "requests": {
-    "title": "Запросы"
+    "title": "Запросы",
+    "noRequests": "Заявки отсутствуют",
+    "addSuccess": "Запрос успешно создан"
   },
   "task": {
     "manager": "Менеджер задач",
@@ -595,5 +597,7 @@
     "admin": "Администратор",
     "teacher": "Преподаватель",
     "student": "Студент"
-  }
+  },
+  "error": "Ошибка",
+  "unexpected_error": "Произошла непредвиденная ошибка"
 }
