feat(tasks): mobile filter dropdown

--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -35,6 +35,7 @@
       "next": "Далее",
       "search": "Поиск",
       "filter": "Фильтр",
+      "filters": "Фильтры",
       "clear": "Очистить",
       "view": "Просмотр",
       "upload": "Загрузить",
