--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -14,6 +14,7 @@
       "next": "Next",
       "search": "Search",
       "filter": "Filter",
+      "filters": "Filters",
       "clear": "Clear",
       "view": "View",
       "upload": "Upload",
