Add notification preferences UI

--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -563,6 +563,7 @@
     "title": "Settings",
     "general": "General",
     "appearance": "Appearance",
+    "profile": "Profile",
     "notifications": "Notifications",
     "security": "Security",
     "language": "Language",
