feat: add settings page with switches

--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -411,7 +411,10 @@
     "lightTheme": "Светлая тема",
     "darkTheme": "Тёмная тема",
     "systemTheme": "Системная тема",
-    "appearance": "Внешний вид"
+    "appearance": "Внешний вид",
+    "notificationSettings": "Настройки уведомлений",
+    "emailNotifications": "Email уведомления",
+    "browserNotifications": "Уведомления в браузере"
   },
   "assignments": {
     "title": "Задания"
