Redesign settings page with profile section

--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -561,6 +561,8 @@
   },
   "settings": {
     "title": "Settings",
+    "myProfile": "My Profile",
+    "languageAndTheme": "Language & Theme",
     "general": "General",
     "appearance": "Appearance",
     "profile": "Profile",
