--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -404,6 +404,8 @@
     "viewFull": "Просмотреть полное расписание"
   },
   "settings": {
+    "myProfile": "Мой профиль",
+    "languageAndTheme": "Язык и тема",
     "language": "Язык",
     "languages": {
       "ru": "Русский",
