fix settings design details

--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -241,7 +241,7 @@
       "currentPassword": "Текущий пароль",
       "newPassword": "Новый пароль",
       "confirmPassword": "Подтвердите пароль",
-      "updateProfile": "Обновить профиль",
+      "updateProfile": "Редактировать",
       "updateSuccess": "Профиль успешно обновлен",
       "updateError": "Ошибка обновления профиля: {{message}}"
     }
