refactor(settings): update notification switches

--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -574,8 +574,11 @@
     "dateFormat": "Date format",
     "timeFormat": "Time format",
     "notificationSettings": "Notification settings",
-    "emailNotifications": "Email notifications",
-    "browserNotifications": "Browser notifications",
+    "notificationsEnabled": "Notifications enabled",
+    "assignmentNotifications": "Assignment notifications",
+    "gradeNotifications": "Grade notifications",
+    "taskNotifications": "Task notifications",
+    "systemNotifications": "System notifications",
     "soundNotifications": "Sound notifications",
     "passwordChange": "Password change",
     "twoFactorAuth": "Two-factor authentication",
